replace's in code, inscrease random and gen speed